# Space-Way

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  Space Way.desktop  Space Way.py  buildozer.spec  collection.py  main.py  mixins.py  pyproject.toml  requirements.txt  setup.py  tox.ini  updater.py
.github/workflows/: check.yml  release.yml
config/: config.json  score.csv  user.json
docs/: CODESTYLE.md  TODO.md  UPDATE.md
scenes/game/: __init__.py  functions.py  objects.py
scenes/headpiece/: functions.py  objects.py
scenes/lobby/: functions.py  objects.py
scenes/settings/: functions.py  objects.py
scenes/table/: functions.py  objects.py
setupfiles/: Space Way.desktop
setupfiles/android/p4a_recipes/spaceway/: __init__.py
spaceway/: __init__.py  boost.py  collection.py  config.py  debug.py  hitbox.py  main.py  mixins.py  music.py  rect.py  updater.py
spaceway/config/: config.json  score.csv  user.json
spaceway/scenes/: __init__.py
spaceway/scenes/game/: __init__.py  functions.py  objects.py
spaceway/scenes/headpiece/: __init__.py  functions.py  objects.py
spaceway/scenes/lobby/: __init__.py  functions.py  objects.py
spaceway/scenes/settings/: __init__.py  functions.py  objects.py
spaceway/scenes/table/: __init__.py  functions.py  objects.py
tests/: conftest.py  requirements.txt  test_collection.py  test_hitbox.py  test_imports.py  test_interface.py  test_mixins.py  test_scenes.py  test_updater.py  utils.py
